[package]
name = "fenceline"
version = "1.2.0"
edition = "2024"
description = "Zero-day security scanner for Python codebases, in Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/lvalverdeb/fenceline-rs"
homepage = "https://github.com/lvalverdeb/fenceline-rs"
documentation = "https://github.com/lvalverdeb/fenceline-rs#readme"
keywords = ["static-analysis", "security", "python", "cwe"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Luis Valverde"]

[[bin]]
name = "fenceline"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
regex = "1.13.1"
rustpython-ast = { version = "0.4.0", features = ["unparse", "visitor"] }
rustpython-parser = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.3"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.14.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
